@@ -129,6 +129,11 @@ class ChromiumWinPort(chromium.ChromiumPort):
                        'build-instructions-windows')
         return result
 
+    def default_worker_model(self):
+        if self._multiprocessing_is_available:
+            return 'processes'
+        return 'old-threads'
+
     def relative_test_filename(self, filename):
         path = filename[len(self.layout_tests_dir()) + 1:]
         return path.replace('\\', '/')
